# gpu-watcher

./: .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: gpu-watcher.service
src/gpu_watcher/: __main__.py  alerts.py  attribution.py  config.py  mac_notifier.py  models.py  nvml.py  privacy.py  service.py  store.py  tailscale.py  web.py
src/gpu_watcher/static/: index.html
tests/: test_alerts.py  test_attribution.py  test_cli.py  test_nvml.py  test_privacy.py  test_store.py  test_web.py
