[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-watcher"
version = "0.1.0"
description = "Tailnet-friendly NVIDIA GPU usage watcher with NVML metrics, attribution, and idle alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "nvidia-ml-py>=12.535",
  "psutil>=5.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[project.scripts]
gpu-watcher = "gpu_watcher.__main__:main"
gpu-watcher-mac-notifier = "gpu_watcher.mac_notifier:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpu_watcher = ["static/*"]
